@@ -1,6 +1,6 @@
 # This file is generated by objective.metadata
 #
-# Last update: Fri Sep 21 15:29:21 2012
+# Last update: Wed Dec 31 16:26:55 2014
 
 import objc, sys
 
@@ -23,6 +23,7 @@ r = objc.registerMetaDataForSelector
 objc._updatingMetadata(True)
 try:
     r(b'IMAVControl', b'isEnabled', {'retval': {'type': b'Z'}})
+    r(b'IMAVControl', b'setAction:', {'arguments': {2: {'sel_of_type': b'v@:@'}}})
     r(b'IMAVControl', b'setEnabled:', {'arguments': {2: {'type': b'Z'}}})
     r(b'NSObject', b'getOpenGLBufferContext:pixelFormat:', {'arguments': {2: {'type_modifier': b'o'}, 3: {'type_modifier': b'o'}}})
     r(b'NSObject', b'getPixelBufferPixelFormat:', {'arguments': {2: {'type_modifier': b'o'}}})
