@@ -20,7 +20,8 @@ Version 3.1
 * Updated bindings for LaunchServices, OpenDirectory, ServiceManagement,
   Social, StoreKit, WebKit and JavaScriptCore with the new APIs introduced in OSX 10.9 and 10.10.
 
-* Unchanged framework bindings: LatentSemanticMapping, InterfaceBuilderKit, PreferencePanes, PubSub.
+* Unchanged framework bindings: InstantMessage, InterfaceBuilderKit,
+  LatentSemanticMapping, PreferencePanes, PubSub.
 
   .. note::
 
